--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,19 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* define variables */
+  --border-color: #cecece;
+  --custom-border: 1px solid #cecece;
+  --panel-shadow: 1px 1px 2px 2px rgba(32, 32, 32, 0.2);
+  --white: #ffffff;
+  --black: #232323;
+  --blue: #5684e7;
+  --active-blue: #3471f9;
+  --red: #e75656;
+  --active-red: #bb1d1d;
+  --gray: #e4e9ea;
+  --active-gray: #9fa5a6;
 }
 
 body {
@@ -36,6 +49,7 @@ body {
   height: 100vh;
   padding: 0.5rem;
   box-sizing: border-box;
+  overflow-y: auto;
 }
 
 input:focus,
@@ -44,14 +58,64 @@ select:focus {
 }
 
 button {
-  padding: 0.5rem 1rem;
-  background-color: #5684e7;
-  color: #fff;
+  padding: 0 1rem;
+  height: 2rem;
+  line-height: 2rem;
+  background-color: var(--blue);
+  color: var(--white);
   border-radius: 0.33rem;
   border: none;
   cursor: pointer;
 }
 button:hover {
-  background-color: #1d4fbb;
+  background-color: var(--active-blue);
+}
+button.red {
+  background-color: var(--red);
+}
+button.red:hover {
+background-color: var(--active-red);
+}
+button.gray {
+  color: var(--black);
+  background-color: var(--gray);
+}
+button.gray:hover {
+  background-color: var(--active-gray);
 }
 
+.dialog-container {
+  position: fixed;
+  z-index: 99;
+  background-color: rgba(0,0,0,0.3);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.dialog-container.visible {
+  display: block;
+}
+.dialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--white);
+  border: var(--custom-border);
+  border-radius: 1rem;
+  max-width: 75%;
+}
+.dialog > header {
+  padding: 0.5rem;
+}
+.dialog > .content {
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 1rem 2.5rem;
+}
+.dialog > footer {
+  padding: 0.5rem;
+  text-align: right;
+}
